--- a/repo/comuniones.html
+++ b/repo/comuniones.html
@@ -5,15 +5,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Health couch velas aromaticas en CABA</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<link rel="stylesheet" href="../css/style.css">
-	<link rel="shortcut icon" href="../img/favicon.jpg">
+	<link rel="stylesheet" href="../css/main.css">
+	<link rel="shortcut icon" href="img/favicon.jpg">
 </head>
 <body>
 	<!-- inicia nav -->
     <nav class="navbar navbar-expand-md navbar-light bg-black" id="Botonera">
         <div class="container-fluid">
-          <a class="navbar-brand" href=../index.html>
-            <img src="../img/logo.jpg" alt="Logo de Health Couch" class="logo--compufot">
+          <a class="navbar-brand" href=index.html>
+            <img src="img/logo.jpg" alt="Logo de Health Couch" class="logo--compufot">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -21,7 +21,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html#contacto">Inicio</a>
+                <a class="nav-link active" aria-current="page" href="index.html#contacto">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="comuniones.html" >Comuniones</a>
@@ -46,10 +46,10 @@
    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="../img/headers/header.jpg" class="d-block w-100" alt="compufot-vera">
+        <img src="img/headers/header.jpg" class="d-block w-100" alt="compufot-vera">
       </div>
       <div class="carousel-item">
-        <img src="../img/headers/header.jpg" class="d-block w-100" alt="compufot-vera">
+        <img src="img/headers/header.jpg" class="d-block w-100" alt="compufot-vera">
       </div> 
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -115,13 +115,13 @@
     <footer class="pie">
         <h3 class="pie__titulo--md">Seguinos en nuestras redes</h3>
 		<a href="https://www.facebook.com/compufot.wingeyer" target="_blank">
-			<img src="../img/iconos/facebook.png" alt="Seguinos en facebook" class="pie__icon--sm">
+			<img src="img/iconos/facebook.png" alt="Seguinos en facebook" class="pie__icon--sm">
 		</a>
 		<a href="https://goo.gl/maps/VcAKZvpRcgcGXb6SA" target="_blank">
-			<img src="../img/iconos/google.jpg" alt="Seguinos en facebook" class="pie__icon--sm">
+			<img src="img/iconos/google.jpg" alt="Seguinos en facebook" class="pie__icon--sm">
 		</a>
 		<a href="https://www.instagram.com/compufot_vera/" target="_blank">
-			<img src="../img/iconos/instagram.jpg" alt="Seguinos en instagram" class="pie__icon--sm">
+			<img src="img/iconos/instagram.jpg" alt="Seguinos en instagram" class="pie__icon--sm">
 		</a>
     <!-- ends footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
