--- a/repo/index.html
+++ b/repo/index.html
@@ -6,7 +6,7 @@
     <title>Health Couch velas orgánicas 100%</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="shortcut icon" href="img/favicon.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
     <!-- inicia nav -->
@@ -24,16 +24,16 @@
                 <a class="nav-link active" aria-current="page" href="index.html#contacto">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="productos/comuniones.html">Comuniones</a>
+                <a class="nav-link" href="comuniones.html">Comuniones</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="productos/cumpleaños-de-15.html">Cumpleaños de 15</a>
+                <a class="nav-link" href="cumpleaños-de-15.html">Cumpleaños de 15</a>
               </li>
               <li class="nav-item">
-                <a href="productos/recepsiones.html">Recepciones</a>
+                <a href="recepsiones.html">Recepciones</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="productos/corsos.html">Corsos</a>
+                <a class="nav-link" href="corsos.html">Corsos</a>
               </li>
             </ul>
             
