terminando los agustes

--- a/repo/cumpleaños-de-15.html
+++ b/repo/cumpleaños-de-15.html
@@ -43,7 +43,7 @@
     </nav>
     <!-- ends nav -->
 <!-- inicia carrusel -->
-<div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+<div id="carouselExampleFade" class="carousel slide carousel-fade w-100" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="img/headers/header.jpg" class="d-block w-100" alt="compufot-vera">
@@ -76,7 +76,7 @@
   <section class="py-3">
     <div class="row">
      <!-- inicio caga 1 -->
-     <article class="col-sm-12 col-md-6 col-lg-3">
+     <article class="col-sm-12 col-md-6 col-lg-3 w-100">
        <a href="https://drive.google.com/drive/folders/1XvfDTg2kwLGVzs2_ifSluq-miQSJLtW_?usp=sharing">
          <img src="img/15 años/ari.jpg" alt="Cumpleaños-de-15-de-ariana">
        </a>
@@ -84,7 +84,7 @@
        <!-- fin caga 1 -->
      </article>
      <!-- inicio caga 2 -->
-     <article class="col-sm-12 col-md-6 col-lg-3">
+     <article class="col-sm-12 col-md-6 col-lg-3 w-100">
        <a href="https://drive.google.com/drive/folders/1DyMuKp3NvaJqxASdYV0OTvNsDe_0_TPn?usp=sharing">
          <img src="img/15 años/cecilia.jpg" alt="Cumpleaños-de-15-de-cecilia">
        </a>
@@ -92,7 +92,7 @@
        <!-- fin caga 2 -->
      </article>
      <!-- inicio caga 3 -->
-     <article class="col-sm-12 col-md-6 col-lg-3">
+     <article class="col-sm-12 col-md-6 col-lg-3 w-100">
        <a href="https://drive.google.com/drive/folders/15Hhc-WHS5xRRZj36GuQC-d0Q6fVMICxm?usp=sharing">
          <img src="img/15 años/jimena.jpg" alt="Cumpleaños-de-15-de-jimena">
        </a>
@@ -100,7 +100,7 @@
        <!-- fin caga 3 -->
      </article>
      <!-- inicio caga 4 -->
-     <article class="col-sm-12 col-md-6 col-lg-3">
+     <article class="col-sm-12 col-md-6 col-lg-3 w-100">
        <a href="">
          <img src="img/15 años/juli.jpg" alt="Cumpleaños-de-15-jilieta">
        </a>
