--- a/repo/recepsiones.html
+++ b/repo/recepsiones.html
@@ -45,7 +45,7 @@
 
    
 <!-- inicia carrusel -->
-<div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+<div id="carouselExampleFade" class="carousel slide carousel-fade w-100" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="img/headers/header.jpg" class="d-block w-100" alt="compufot-vera">
