ultimos agustes antes de terminar todo

--- a/repo/comuniones.html
+++ b/repo/comuniones.html
@@ -75,7 +75,7 @@
     <section class="py-3">
          <div class="row">
           <!-- inicio caga 1 -->
-          <article class="col-sm-12 col-md-6 col-lg-3">
+          <article class="col-sm-12 col-md-6 col-lg-3 w-100">
             <a href="">
               <img src="" alt="">
             </a>
@@ -83,7 +83,7 @@
             <!-- fin caga 1 -->
           </article>
           <!-- inicio caga 2 -->
-          <article class="col-sm-12 col-md-6 col-lg-3">
+          <article class="col-sm-12 col-md-6 col-lg-3 w-100">
             <a href="">
               <img src="" alt="">
             </a>
@@ -91,7 +91,7 @@
             <!-- fin caga 2 -->
           </article>
           <!-- inicio caga 3 -->
-          <article class="col-sm-12 col-md-6 col-lg-3">
+          <article class="col-sm-12 col-md-6 col-lg-3 w-100">
             <a href="">
               <img src="" alt="">
             </a>
@@ -99,7 +99,7 @@
             <!-- fin caga 3 -->
           </article>
           <!-- inicio caga 4 -->
-          <article class="col-sm-12 col-md-6 col-lg-3">
+          <article class="col-sm-12 col-md-6 col-lg-3 w-100">
             <a href="">
               <img src="" alt="">
             </a>
