--- a/repo/recepsiones.html
+++ b/repo/recepsiones.html
@@ -76,7 +76,7 @@
   <section class="py-3">
     <div class="row">
      <!-- inicio caga 1 -->
-     <article class="col-sm-12 col-md-6 col-lg-3">
+     <article class="col-sm-12 col-md-6 col-lg-3 w-100">
        <a href="">
          <img src="" alt="">
        </a>
@@ -84,7 +84,7 @@
        <!-- fin caga 1 -->
      </article>
      <!-- inicio caga 2 -->
-     <article class="col-sm-12 col-md-6 col-lg-3">
+     <article class="col-sm-12 col-md-6 col-lg-3 w-100">
        <a href="">
          <img src="" alt="">
        </a>
@@ -92,7 +92,7 @@
        <!-- fin caga 2 -->
      </article>
      <!-- inicio caga 3 -->
-     <article class="col-sm-12 col-md-6 col-lg-3">
+     <article class="col-sm-12 col-md-6 col-lg-3 w-100">
        <a href="">
          <img src="" alt="">
        </a>
@@ -100,7 +100,7 @@
        <!-- fin caga 3 -->
      </article>
      <!-- inicio caga 4 -->
-     <article class="col-sm-12 col-md-6 col-lg-3">
+     <article class="col-sm-12 col-md-6 col-lg-3 w-100">
        <a href="">
          <img src="" alt="">
        </a>
